--- a/src/pages/Details/Reviews.module.scss
+++ b/src/pages/Details/Reviews.module.scss
@@ -33,6 +33,7 @@
       }
     }
     .review-content {
+      padding-bottom: 40px;
       .heading-review {
         margin-top: 8px;
         display: flex;
