--- a/src/components/DetailInvoiceModal/DetailInvoiceModal.module.scss
+++ b/src/components/DetailInvoiceModal/DetailInvoiceModal.module.scss
@@ -51,15 +51,11 @@
     padding-bottom: 10px;
     .info {
       padding-left: 20px;
-      h2 {
-        font-family: 'Butler', sans-serif;
-        font-size: 5rem;
-      }
     }
     .logo {
       display: flex;
       flex-direction: column;
-      align-items: end;
+      align-items: flex-end;
       padding: 20px;
 
       img {
@@ -125,4 +121,11 @@
   text-align: center;
   font-size: 1rem;
   color: #939393;
+}
+
+.heading {
+  font-size: 5rem;
+  font-family: 'Butler', sans-serif;
+  margin: 0;
+  font-weight: 400;
 }
