--- a/src/components/Price-Filter/Price-Filter.module.scss
+++ b/src/components/Price-Filter/Price-Filter.module.scss
@@ -1,39 +1,52 @@
 .wrapper {
-  position: relative;
-  width: 100%;
-  height: 3px;
-  background-color: red;
-  border: 0.5px solid #ccc;
-  border-radius: 999px;
-}
-.left {
-  position: absolute;
-  z-index: 10;
-  top: -9px;
-  left: 0;
-  display: block;
-  width: 20px;
-  height: 20px;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 50%;
-  cursor: ew-resize;
-}
-.right {
-  position: absolute;
-  z-index: 10;
-  top: -9px;
-  left: 240px;
-  display: block;
-  width: 20px;
-  height: 20px;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 50%;
-  cursor: ew-resize;
+  padding: 20px 0;
 }
 
-.price-range {
-  color: #333;
-  font-size: 1.4rem;
+.price-inputs {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+
+  span {
+    font-size: 1.4rem;
+    color: #666;
+  }
+}
+
+.slider {
+  position: relative;
+  height: 5px;
+  width: 100%;
+  background: #ddd;
+  border-radius: 5px;
+
+  .progress {
+    position: absolute;
+    height: 5px;
+    background: #000;
+    border-radius: 5px;
+    pointer-events: none;
+  }
+
+  input[type='range'] {
+    position: absolute;
+    width: 100%;
+    height: 5px;
+    top: 0;
+    -webkit-appearance: none;
+    pointer-events: none;
+    background: none;
+
+    &::-webkit-slider-thumb {
+      height: 15px;
+      width: 15px;
+      border-radius: 50%;
+      background: #000;
+      pointer-events: auto;
+      -webkit-appearance: none;
+      cursor: pointer;
+      border: 2px solid #fff;
+      box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
+    }
+  }
 }
