--- a/src/pages/Customer/Address/Address.module.scss
+++ b/src/pages/Customer/Address/Address.module.scss
@@ -54,3 +54,14 @@
     border: none;
   }
 }
+
+.error-message {
+  margin-top: -10px;
+  color: #000;
+  font-size: 1.4rem;
+}
+
+.exclamation {
+  color: #eb001b;
+  margin-right: 5px;
+}
