--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -30,7 +30,22 @@
 .img-wrapper {
   position: relative;
   overflow: hidden;
-  transition: transform 0.3s linear;
+  width: 100%;
+  height: 400px;
+
+  .img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    transition: transform 0.3s linear;
+  }
+
+  &:hover {
+    .img {
+      transform: scale(1.07);
+    }
+  }
 }
 
 .actions {
@@ -99,12 +114,6 @@
     opacity: 0;
     height: 0;
   }
-}
-
-.img {
-  display: block;
-  width: 100%;
-  transition: transform 0.3s linear;
 }
 
 .category {
@@ -190,4 +199,52 @@
   font-size: 1.2rem;
   font-weight: 500;
   z-index: 99;
+}
+
+.product-component {
+  width: 100%;
+  margin-bottom: 30px;
+
+  .product-img {
+    width: 100%;
+    aspect-ratio: 2/3;
+    position: relative;
+    overflow: hidden;
+    background-color: #f5f5f5;
+
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transition: transform 0.3s ease;
+
+      &:hover {
+        transform: scale(1.05);
+      }
+    }
+  }
+
+  .product-info {
+    padding: 15px 0;
+    text-align: center;
+
+    .product-name {
+      font-size: 16px;
+      font-weight: 500;
+      margin-bottom: 8px;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      min-height: 40px;
+    }
+
+    .product-price {
+      font-size: 15px;
+      color: #000;
+    }
+  }
 }
